--- a/Master03.tex
+++ b/Master03.tex
@@ -1,7 +1,285 @@
+\documentclass[]{report}
+
+\voffset=-1.5cm
+\oddsidemargin=0.0cm
+\textwidth = 480pt
+
+\usepackage{framed}
+\usepackage{subfiles}
+\usepackage{enumerate}
+\usepackage{graphics}
+\usepackage{newlfont}
+\usepackage{eurosym}
+\usepackage{amsmath,amsthm,amsfonts}
+\usepackage{amsmath}
+\usepackage{color}
+\usepackage{amssymb}
+\usepackage{multicol}
+\usepackage[dvipsnames]{xcolor}
+\usepackage{graphicx}
+\begin{document}
 
 
 
 \chapter{Logic}
+
+\chapter{Session 3}
+
+
+\subsection*{Part B : Logical Operations}
+Let $n \in \{1,2,3,4,5,6,7,8,9\}$ and let p and q be the following propostions concerning 
+the integers $n$.
+
+\begin{itemize}
+	\item[p] $n$ is event
+	\item[q] $n<5$
+\end{itemize}
+
+Find the values of $n$ for which each of the following compound statement is true,
+
+\begin{itemize}
+	\item[(i)] $\neg p$
+	\item[(ii)] $p \wedge q$
+	\item[(iii)] $\neg p \vee q$ 
+	\item[(iv)] $p \oplus q$
+\end{itemize}
+
+\section*{Question 3}
+
+Let $\mathcal{S} = \{10,11,12,13,14,15,16,17,18,19,20\}$
+$n  \in \mathcal{S}$
+p : n is a multiple of two
+q : n is a multiple of five
+
+Express the following statement using logic symbols
+n is not a multiple of either 2 or 5.
+
+List the elements of S which are in the truth set for the statement in (ii).
+
+Write the contrapositive of the following statement concerning an integer $n$.
+
+If the last digit of n is 4, then n is divisible by 3
+
+% %------------------------------------------------------
+\section{Conditional Connectives}
+Construct the truth table for the proposition $p \rightarrow q$.
+
+\begin{center}
+	\begin{tabular}{|c|c|c|c|}
+		\hline
+		p & q & $p \rightarrow q$ & $q \rightarrow p$ \\
+		\hline
+		0 & 0 & 1& 1 \\
+		0 & 1 & 1 & 0 \\
+		1 & 0 & 0 & 1 \\
+		1 & 1 & 1 & 1 \\
+		\hline
+	\end{tabular}
+\end{center}
+
+\section{Tautologies and Truth Tables}
+\textbf{Truth Table for the Biconditional Connective.} \bigskip
+\begin{center}
+	\begin{tabular}{|c|c|c|}
+		\hline $P$  & $Q$ & $P \leftrightarrow Q$ \\ \hline
+		\hline T & T &   \\ 
+		\hline T & F &    \\ 
+		\hline F & T &    \\ 
+		\hline \phantom{sp}F \phantom{sp} & \phantom{sp}F \phantom{sp} & \phantom{sp}T \phantom{sp} \\
+		\hline 
+	\end{tabular} 
+\end{center}
+
+\begin{tabular}{|c|c|c|c|c|}
+	\hline $P$ & $Q$ & $P \vee Q$ &  &  \\ \hline
+	\hline T & T &  &  &  \\ 
+	\hline T & F &  &  &  \\ 
+	\hline F & T &  &  &  \\ 
+	\hline \phantom{sp}F \phantom{sp} & \phantom{sp}F \phantom{sp} & \phantom{spacespa} & \phantom{spacespa}  & \phantom{spacespa} \\ 
+	
+	\hline 
+\end{tabular} 
+
+%-------------------------------------------------------------------------%
+\newpage
+
+
+
+\section*{Question 3}
+\subsection*{Part A : Propositions}
+Let p, q be the following propositions:
+\begin{itemize}
+	\item p : this apple is red, 
+	\item q : this apple is ripe.
+\end{itemize}
+
+\noindent Express the following statements in words as simply as you can:
+\begin{itemize}
+	\item[(i)] $p \rightarrow q$
+	\item[(ii)] $p \wedge \neg q$.
+\end{itemize}
+
+\noindent Express the following statements symbolically:
+\begin{itemize}
+	\item[(iii)] This apple is neither red nor ripe.
+	\item[(iv)] If this apple is not red it is not ripe.
+\end{itemize}
+
+
+
+%------------------------------------%
+\newpage
+\section*{Question 3}
+% Logical Proofs
+
+
+
+% %------------------------------------------------------
+
+
+\section*{Question 6}
+%Relations and Digraphs
+
+%------------------------------------%
+\subsection{Question 6}
+Say with reason whether or not $\mathcal{R}$ is
+\begin{itemize}
+	\item reflexive
+	\item symmetric
+	\item transitive
+\end{itemize}
+
+In the cases where the given property does not hold provide a counter example to justify this.
+% %------------------------------------------------------
+
+
+\subsection*{Question 6 Part A : Digraphs}
+
+Suppose $A = $$\{1,2,3,4\}$. Consider the following relation in A
+
+\[ \{  (1,1),(2,2),(2,3),(3,2),(4,2),(4,4)\} \]
+
+Draw the direct graph of $A$. Based on the Digraph of $A$ discuss whether or not a relation that could be depicted by the digraph could be described as the following, justifying your answer.
+
+
+\begin{itemize}
+	\item[(i)] Symmetric
+	\item[(ii)] Reflexive 
+	\item[(iii)] Transitive
+	\item[(iv)] Antisymmetric
+\end{itemize}
+
+\subsection*{Part B : Relations}
+Determine which of the following relations $ x R y$ are reflexive, transitive, symmetric, or antisymmetric on the following - there may be more than one characteristic.  if
+
+\begin{itemize} 
+	\item[(i)] $x = y$
+	\item[(ii)] $x < y$
+	\item[(iii)] $x^2 = y^2$
+	\item[(iv)] $x \geq y$
+\end{itemize}
+%---------------------------------------%
+\subsection*{Question 2}
+
+% http://staff.scem.uws.edu.au/cgi-bin/cgiwrap/zhuhan/dmath/dm_readall.cgi?page=20
+
+Let $A=\{0,1,2\}$ and $R=\{ (0,0),(0,1),(0,2),(1,1), (1,2), (2,2)\}$
+and $S=\{(0,0),(1,1),(2,2)\}$ be 2 relations on A. Show that
+
+\begin{itemize}
+	\item[(i)] R is a partial order relation.
+	\item[(ii)] S is an equivalence relation.
+\end{itemize}
+%------------------------------------%
+
+\subsection*{Part C : Partial Orders}
+% http://staff.scem.uws.edu.au/cgi-bin/cgiwrap/zhuhan/dmath/dm_readall.cgi?page=20
+
+Let $A=\{0,1,2\}$ and $R=\{ (0,0),(0,1),(0,2),(1,1), (1,2), (2,2)\}$
+and $S=\{(0,0),(1,1),(2,2)\}$ be 2 relations on A. Show that
+
+\begin{itemize}
+	\item[(i)] R is a partial order relation.
+	\item[(ii)] S is an equivalence relation.
+\end{itemize}
+
+
+
+%------------------------------------%
+
+\section*{Biconnective Operators}
+
+\[ p \leftarrow \rightarrow q\]
+We could verbalize this as ``$p$ implies $q$ and $q$ implies $p$".
+
+%-------------------------- %
+%-------------------------- %
+%Section 4 Invertible Functions
+
+
+
+Maths for Computing Sprint
+
+\section*{Part 0. - Numeracy}
+\subsection{Factorials}
+Evaluate the following
+\begin{itemize}
+	\item $6!$
+	\item $3!$
+	\item $1!$
+	\item $0!$
+\end{itemize}
+Evaluate the following expressions
+\[  \frac{5!}{3!}  \mbox{   and   } \frac{6!}{2!\times 4!}  \]
+\subsection*{Laws of Logarithms}
+\begin{itemize}
+	\item Addition of Logarithms
+	\item Subtraction of Logaritms
+	\item Powers of Logarithms
+\end{itemize}
+%----------------------------------------- %
+%----------------------------------------- %
+
+
+\section*{Section 3. Logic}
+
+\subsection*{Proofs with Truth Tables}
+
+\[ \neg(p \vee q) \wedge p \equiv q \]
+\begin{center}
+	\begin{tabular}{|c|c||c|c||c|c|}
+		\hline $p$ & $q$ &  &  &  &  \\ 
+		\hline  &  &  &  &  &  \\ 
+		\hline 
+	\end{tabular} 
+\end{center}
+
+%----------------------------------------- %
+%----------------------------------------- %
+
+
+\section{Section 3 Logic}
+\subsection{Logical Operations}
+\begin{itemize}
+	\item $\neg p$ the negation of proposition $p$.
+	\item $p \wedge q$ Both propositions p and q are simultaneously true (Logical State AND)
+	\item $p \vee q $ One of the propositions is true, or both (Logical State : OR)
+	\item $p \otimes q$ Only one of the propositions is true (Logical State : exclusive OR (i.e XOR)
+\end{itemize}
+\begin{center}
+	\begin{tabular}{|c|c|c|c|c|}
+		\hline
+		p & q & $p \vee q$ & $q \wedge p$ & $p \otimes q$ \\
+		\hline
+		0 & 0 & 0 & 0 & 0 \\
+		0 & 1 & 1 & 0 & 1\\
+		1 & 0 & 1 & 0 & 1 \\
+		1 & 1 & 1 & 1 & 0\\
+		\hline
+	\end{tabular}
+\end{center}
+%---------------------------------------------------------%
+
 
 %--------------------------------------%
 
@@ -40,10 +318,13 @@ For each of the following compound statements, express it using the propositions
 \item[2)] If n is a factor of 4 or n is a factor of 9 then  n is a factor of 36
 \end{itemize}
 
-%--------------------------------------%
-
+%------------------------------------------------%
 \newpage
-
+\begin{itemize}
+	\item $ p \rightarrow q$  p implies q
+	\item $p \lg q $
+\end{itemize}
+\newpage
 \section*{Part 1 : Logic}
 
 
@@ -159,7 +440,58 @@ Write the contrapositive of each of the following statements:
 \item If the four sides are not equal, then the quadrilateral is not a square.
 \end{itemize}
 
+\section*{Prepositional Logic}
 
+\subsection{five basic connectives}
+
+
+%--------------------------------------------------%
+Reflexive, Symmetric and Transitive
+
+\begin{itemize} 
+	\item Reflexive
+	\item Symmetric
+	\item Transitive
+\end{itemize}
+
+%--------------------------------------------------%
+\subsection{Logarithms}
+
+
+Here we
+assume x and y are positive real numbers.
+1. $loga(xy) = loga(x) + loga(y)$
+2. $loga(x/y)= loga(x) - loga(y)$
+3. $loga (x^r) = r loga(x)$ for any real number r.
+%--------------------------------------------------%
+Invertible Functions
+
+%--------------------------------------------------%
+\subsection{Proof by Induction}
+
+Another sequence is defined by the recurrence relation un = un-1+2n-1 and
+u1 = 1.
+(i) Calculate u2, u3, u4 and u5.
+1,4,9,16,25
+
+(ii) Prove by induction that $u_n = n^2$ for all $n \geq 1$
+
+%--------------------------------------------------%
+Exponentials
+% http://www.mathsisfun.com/algebra/exponent-laws.html
+%----------------------------------------------------------- %
+\newpage
+
+\section*{Prepositional Logic}
+
+
+%-------------------------------------------------------------- %
+\begin{itemize}
+	\item $p \wedge q$
+	\item $p \vee q$
+	\item $p \rightarrow q$
+\end{itemize}
+\newpage
 %--------------------------------------------------- %
 %--------------------------------------------------- %
 \subsection*{1.5 Truth Sets}
@@ -252,6 +584,26 @@ lost in the final part by failing to deduce that ‘since the columns of the tab
 identical the expressions are equivalent’.}
 
 %--------------------------------------------------- %
+\subsection{logical implication}
+
+%- http://whatis.techtarget.com/definition/logical-implication
+
+Logical implication is a type of relationship between two statements or sentences. The relation translates verbally into "logically implies" or "if/then" and is symbolized by a double-lined arrow pointing toward the right ( $\rightarrow$). If A and B represent statements, then $A\rightarrow B$ means "A implies B" or "If A, then B." The word "implies" is used in the strongest possible sense.
+
+
+As an example of logical implication, suppose the sentences A and B are assigned as follows:
+
+A = The sky is overcast.
+B = The sun is not visible.
+
+In this instance, A B is a true statement (assuming we are at the surface of the earth, below the cloud layer.) However, the statement B A is not necessarily true; it might be a clear night. Logical implication does not work both ways. However, the sense of logical implication is reversed if both statements are negated. That is,
+
+$$(A \rightarrow B)  \equiv (-B \rightarrow -A)$$
+
+Using the above sentences as examples, we can say that if the sun is visible, then the sky is not overcast. This is always true. In fact, the two statements A B and -B -A are logically equivalent.
+
+\newpage
+%---------------------------------------%
 %--------------------------------------------------- %
 \subsection*{1.8 2008 Q3b Logic Networks }
 Construct a logic network that accepts as input p and q, which may independently have the value 0 or 1, and
@@ -262,3 +614,4 @@ gives as final input $(p \wedge  q) \vee \neg q$ (i.e. $\equiv p \rightarrow q$)
 \textbf{Important} Label each of the gates appropriately and label the diagram with a symblic expression for the output after each gate.
 
 %----------------------------------------------------------- %
+\end{document}
