--- a/Master03.tex
+++ b/Master03.tex
@@ -23,6 +23,59 @@
 
 \chapter{Logic}
 
+\section{Chapter 3: Logic}
+
+\textbf{2003 Question 3}\\
+Let p, q be the following propositions:
+\begin{itemize}
+	\item p : this apple is red, 
+	\item q : this apple is ripe.
+\end{itemize}
+
+Express the following statements in words as simply as you can:
+\begin{itemize}
+	\item (i) $p \rightarrow q$
+	\item (ii) $p \wedge \neg q$.
+\end{itemize}
+
+
+Express the following statements symbolically:
+\begin{itemize}
+	\item (iii) This apple is neither red nor ripe.
+	\item (iv) If this apple is not red it is not ripe.
+\end{itemize}
+
+
+
+\subsection{Logical Operations}
+
+\begin{itemize}
+	\item Logical "AND" ($\wedge$)
+	\item Logical "OR" ($\vee$)
+	\item Logical "NOT" 
+\end{itemize}
+%--------------table
+%\begin{tabular}{cccc}\hline
+%p & q& P \vee q& p \wedge q  \\
+%0& 0& 0& 0\\ 
+%0& 1& 0& 1 \\ 
+%1& 0& 0& 1 \\ 
+%1& 1&1 &1  \\  \hline
+%\end{tabular}
+\newpage
+
+%--------------------------------------------%
+\subsection*{Logic Networks}
+\begin{itemize}
+	\item AND Gates
+	\item OR Gates
+	\item NOT Gates
+\end{itemize}
+
+\newpage
+
+%--------------------------------------------%
+
 \chapter{Session 3}
 
 
