Update and rename Subsets and Elements.tex to 000-Subsets and Elements.tex

--- a/MASTER02-Settheory/000-Subsets and Elements.tex
+++ b/MASTER02-Settheory/000-Subsets and Elements.tex
@@ -1,24 +1,4 @@
-\documentclass{beamer}
 
-\usepackage{amsmath}
-\usepackage{framed}
-\usepackage{amssymb}
-\usepackage{graphics}
-
-\begin{document}
-\begin{frame}
-\Huge
-\[ \mbox{Mathematics for Computing} \]
-\huge
-\[ \mbox{Subsets and Elements of Sets} \]
-
-\Large
-\[ \mbox{kobriendublin.wordpress.com} \]
-\[ \mbox{Twitter: @StatsLabDublin} \]
-
-\end{frame}
-%-------------------------------------%
-\begin{frame}
 \frametitle{Subsets and Elements of Sets}
 \Large
 \vspace{-0.5cm}
@@ -31,12 +11,7 @@
 \item If a single value $k$ is not an element of set $A$, then we write
 \[k \notin A \]
 \end{itemize}
-\end{frame}
-%------------------------------------- %
-\begin{frame}
-\frametitle{Subsets and Elements of Sets}
-\Large
-\vspace{-1.5cm}
+
 \textbf{Subsets}\\
 Given two sets $A$ and $B$, the set $A$ is a \textbf{subset} of set $B$ if every element of $A$ is also an element of $B$. 
 
@@ -48,12 +23,7 @@ We write this mathematically as
 \bigskip
 Sets are denoted with curly braces, even if they contain only one element.
 
-\end{frame}
-%------------------------------------- %
-\begin{frame}
-\frametitle{Subsets and Elements of Sets}
-\Large
-\vspace{-0.4cm}
+
 \textbf{Subsets}\\
 Suppose we have the set $A$ comprised of the following elements
 \[ A =\{3,5,7,9\}\]
@@ -63,12 +33,7 @@ The value $5$ is an element of $A$
 The single element set $\{5\} $ is a subset of $A$.
 \[ \{5\} \subseteq A\]
 
-\end{frame}
-%-------------------------------------%
-\begin{frame}
-\frametitle{Subsets and Elements of Sets}
-\Large
-\vspace{-2cm}
+
 \textbf{Proper Subsets}\\
 Given two sets $A$ and $B$, the set $A$ is a \textbf{proper subset} of set $B$ if every element of $A$ is also an element of $B$, but there are elements of set $B$ that are not in set $A$.
 
@@ -76,13 +41,8 @@ Given two sets $A$ and $B$, the set $A$ is a \textbf{proper subset} of set $B$ i
 We write this mathematically as
 \[A \subset B \]
 
-\end{frame}
-%-------------------------------------%
-\begin{frame}
-\frametitle{Subsets and Elements of Sets}
-\Large
-\vspace{-2cm}
-\textbf{Equivalent Sets}\\
+
+\subsection{Equivalent Sets}\\
 If both of the following two statements are \textbf{true}, 
 \[\mbox{1)  } A \subseteq B \]
 \[\mbox{2)  } B \subseteq A \]
@@ -90,14 +50,7 @@ If both of the following two statements are \textbf{true},
 then $A$ and $B$ are \textbf{equivalent sets}.
 
 
-\end{frame}
 
-
-%-------------------------------------%
-\begin{frame}
-\frametitle{Subsets and Elements of Sets}
-\Large
-\vspace{-2cm}
 \textbf{Non-Comparable Sets}\\
 If both of the following two statements are \textbf{false}, 
 \[\mbox{1)  } A \subseteq B \]
