--- a/Master-B.tex
+++ b/Master-B.tex
@@ -54,26 +54,6 @@ Airthmetic Progression
 \subsection*{Series and Sigma Notation(7.2.3)}
 
 
-%-----------------------------------------------------%
-
-\section*{Question 7}
-\subsection*{Part A : Recurrence Relations}
-A sequence is defined by the recurrence relations
-\[x_{n+2}  = 3x_{n+1} - 2x_n\]
-with initial terms $x_1 = 1$ and $x_2=3$.
-
-\begin{itemize}
-\item[(i)] Calculate $x_3$, $x_4$ and $x_5$, showing your workings.
-\item[(ii)] Prove by induction that $x_n = 2^n - 1$ for all $n \geq 1$
-\end{itemize}
-
-%------------------------------------%
-\subsection*{Part B : Summations}
-
-Compute the following summation
-
-\[ \sum^{i=100}_{i=25} i^2 + 3i -5)\]
-%------------------------------------%
 
 
 Say which of the set the following numbers belong to.
@@ -96,57 +76,10 @@ $\frac{3}{7}$
 
 
 
-
-%------------------------------------%
-
-\section*{Question 7b}
-
-Compute the following summation
-
-\[ \sum^{i=100}_{i=25} i^2 + 3i -5)\]
-
-
-%------------------------------------%
-
-\section*{Question 7}
-A sequence is defined by the formula 
-$u_n = 5n-3$ for $n\geq 1$
-
-\[\frac{n(n+1)(2n+1)}{6}\]
-
-Write the following sums in the $\Sigma$ notation and evaluate them
-
-\begin{itemize}
-\item $1^2 + 2^2 + 3^2 +  \ldots +  40^2 = ?$
-\item $2 + 5 + 10 + \ldots + 1601 = ?$
-\item $2+8+18+\ldots +3200 = ?$
-\end{itemize}
-
-\section*{Part A : Recurrence Relations}
-A sequence is defined by the recurrence relations
-\[x_{n+2}  = 3x_{n+1} - 2x_n\]
-with initial terms $x_1 = 1$ and $x_2=3$.
-
-\begin{itemize}
-\item[(i)] Calculate $x_3$, $x_4$ and $x_5$, showing your workings.
-\item[(ii)] Prove by induction that $x_n = 2^n - 1$ for all $n \geq 1$
-\end{itemize}
-
 %------------------------------------%
 
 
 
-
-\section*{Proof By Induction}
-
-\begin{itemize}
-\item \textbf{Base Step}
-\item \textbf{Induction Step}
-\item \textbf{Some Step}
-\end{itemize}
-
-%------------------------- %
-%-------------------------- %
 
 %------------------------------------%
 \subsection{Sequence and Series and Proof by Induction}
@@ -154,170 +87,6 @@ with initial terms $x_1 = 1$ and $x_2=3$.
 
 \[\sum^{n}_{i=1} (n^2) \]
 
-
-\section{Proof By Induction}
-
-Prove by Induction the following expression
-\[ \sum_{r=1}^{r=n} r^2 = \frac{n(n+1)(2n+1)}{6} \]
-for all $n \in N_0$.
-
-
-\begin{itemize}
-	\item \textbf{Step 1} : Is the proposition true for $n = 1$?
-	\item \textbf{Step 2} : Show that if the proposition is true for $n=k$, then it is also true for $n=k+1$.
-	\item \textbf{Step 3} : Conclude that the proposition is true for all natural numbers greater than or equal to one.
-\end{itemize}
-
-%------------------------------------------------ %
-
-\subsection{Proof By Induction}
-
-Prove by induction the following expression
-\[ \sum_{r=1}^{r=n} r^2 = \frac{n(n+1)(2n+1)}{6} \]
-for all $n \in N_0$.
-\begin{itemize}
-	\item \textbf{Step 1} : Is the proposition true for $n = 1$? 
-\end{itemize}
-\textbf{Left-hand side}
-\[ \sum_{r=1}^{r=1} r^2 = 1^2 = 1 \]
-
-
-
-\textbf{Left-hand side}
-\[ \sum_{r=1}^{r=1} r^2 = 1^2 = \boldsymbol{1} \]
-\textbf{Right-hand side}
-
-\[ \frac{n(n+1)(2n+1)}{6}  = \frac{1(1+1)(2\cdot 1+1)}{6} \]
-\[  = \frac{1\times 2 \times 3}{6} = \frac{6}{6}=\boldsymbol{1} \]
-
-%------------------------------------------------ %
-
-
-\begin{itemize}
-	\item \textbf{Step 1} : Is the proposition true for $n = 1$? 
-\end{itemize}
-\bigskip
-Yes: The left-hand side and right-hand side of the equation yield the same value.
-
-\begin{itemize}
-	\item \textbf{Step 2} : Show that if the proposition is true for $n=k$, then it is also true for $n=k+1$.
-\end{itemize}
-Given: \[ \sum_{r=1}^{r=k} r^2 = \frac{k(k+1)(2k+1)}{6} \]
-
-To Prove: \[ \sum_{r=1}^{r=k+1} r^2 = \frac{(k+1)(k+2)(2k+3)}{6} \]
-
-
-%------------------------------------------------ %
-
-\subsection{Proof By Induction}
-%% - \vspace{-1cm}
-
-
-
-\[ \sum_{r=1}^{r=k+1} r^2 = 1^2 + 2^2 + 3^2 + \ldots + k^2 + (k+1)^2 \]
-
-
-
-
-
-
-\[ \sum_{r=1}^{r=k+1} r^2 = 1^2 + 2^2 + 3^2 + \ldots + k^2 + (k+1)^2 \]
-
-\[ \sum_{r=1}^{r=k+1} r^2 = \boldsymbol{\sum_{r=1}^{r=k} r^2} + (k+1)^2 \]
-
-
-
-\[ \sum_{r=1}^{r=k+1} r^2 = \boldsymbol{\sum_{r=1}^{r=k} r^2} + (k+1)^2 \]
-
-\[ \sum_{r=1}^{r=k+1} r^2 = \frac{k(k+1(2k+1
-	))}{6} + (k+1)^2 \]
-
-
-%---------------------------------------%
-\chapter{Session 8}
-% % Section 8 Trees
-%-----------------------------------------------------%
-\section*{Question 8}
-\subsection*{Part A : Spanning Trees}
-\begin{enumerate}
-\item How many edges are in the spanning tree $T$ ?
-\item What is the sum of the degree sequence of $T$?
-\item Write down all the possible degree sequences for the spanning tree $T$.
-\end{enumerate}
-%------------------------------------%
-
-\subsection*{Part B : Binary Search Trees}
-Suppose a database, comprised of 30,000 internal nodes, is structured as a Binary Search Tree.
-
-\begin{enumerate}
-\item What is the key (number) of the Root node?
-\item What are the keys of the nodes at level 1?
-\item For the nodes at level1, how many subtrees are there?
-\item State which nodes are in the substrees of the level 1 nodes?
-\item How many nodes are the between the root (level 0) and level 7. ]
-(Hint: use a summation theorem mentioned in session 7
-\item What is the maximum number of searchs in this database?
-\end{enumerate}
-
-
-
-
-\section{Question 8B}
-Suppose a database, comprised of 30,000 internal nodes, is structured as a Binary Search Tree.
-
-\begin{enumerate}
-\item What is the Key of the Root node?
-\item What are the keys of the nodes at level 1?
-\item For the nodes at level1, how many subtrees are there?
-\item State which nodes are in the substrees of the level 1 nodes?
-\item How many nodes are the between the root (level 0) and level 7. ]
-(Hint: use a summation theorem mentioned in session 7
-\item What is the maximum number of searchs in this database?
-\end{enumerate}
-%--------------------------------------------------------------------
-
-\section*{Binary Search Trees}
-What is a Binary Search Tree
-\[ \lfloor  \frac{\mbox{log}_2}{T} \rfloor \]
-
-%------------------------- %
-%-------------------------- %
-\section*{Session 08:Trees}
-\begin{itemize}
-\item[8A.1] Trees
-\item[8A.2] Spanning Trees
-\item[8A.3] Rooted trees
-\item[8A.4] Binary Search Trees
-\end{itemize}
-A tree is a directed graph that contains no cycles.
-%-----------------------------------------------------%
-\section{Question 8}
-
-1) Draw this tree
-2) Construct all the isomorphic tress with 6 vertices which can be obtainbed by attaching a new vertex of degreee one to a vertex of T.
-3) Explain briefly why the tree obtained in (ii) is not isomorphic to each other.
-4) Construct a tree with 6 vertices which is not isomorphic to any tree you constructed in (ii)
-
-Part b
-Determine the number of nodes on level 5 and level 10
-Find an expression in terms of $\Sigma$ and h for the number of internal nodes in such a tree.
-What is the smallest possible height of such a tree if there are at least 900 internal nodes.
-
-% %------------------------------------------------------
-
-\section{Question 8A}
-\begin{enumerate}
-\item How many edges are in the spanning tree $T$ ?
-\item What is the sum of the degree sequence of $T$?
-\item Write down all the possible degree sequences for the spanning tree $T$.
-\end{enumerate}
-
-\section{Tree Definition}
-What properties must a graph have in order for it to be a
-tree?
-(ii) Say, with reason, whether or not it is possible to construct a tree with
-degree sequence 4, 3, 3, 1, 1.
-\newpage
 
 \subsection*{Question 1}
 
@@ -391,10 +160,6 @@ with two zeroes.
 %-------------------------------------------------------------------------%
 \newpage
 
-
-\begin{frame}
-\frametitle{Proof By Induction}
-\Large
 \textbf{Three Steps}
 \begin{description}
 \item[Step 1]
@@ -402,16 +167,14 @@ with two zeroes.
 \item[Step 3]
 \end{description}
 
-\end{frame}
-%-------------------------------------------------------------------%
-\begin{frame}
-\frametitle{Proof by Induction}
-\Large
+
+{Proof by Induction}
+
 Let the summation $s_n$ be defined as follows:
 \[s_n = 1 + 3 + 5 + \ldots + (2n - 1) \qquad \mbox{for n }\in \mathbb{Z}^{+}\]
 
 Use the method of induction to prove that $s_n = n^2$ for all $n \geq 1$.
-\end{frame}
+
 
 %------------------------------------------- %
 
@@ -437,129 +200,10 @@ The Axioms of Probability
 \item[9A.4] Independent Events
 \end{itemize}
 \begin{itemize}
-\item[9B.1] Permutation
-
-\[ {n \choose r} = \frac{n!}{(n-r)! r!} \]
-
-
-\[ {6 \choose 3} = \frac{6!}{(6-3)! 3!} = \frac{6!}{3! \times 3!}\]
-
-
-\[ \frac{6!}{3! \times 3!} = \frac{6 \times 5 \times 4 \times 3!}{3! \times 3!} = \frac{120}{6} = 120\]
-\end{itemize}
-%\begin{multicol}{2}
-\begin{itemize}
-\item ${6 \choose 2} = 15$
-\item ${5 \choose 2} = 10$  
-\item ${4 \choose 0} = 1$  
-\item ${4 \choose 3} = 4$  
-\end{itemize}
-%\end{multicol}
-
-\begin{itemize}
-\item pairwise disjoint sets
-\item The addition principle
-\end{itemize}
-\subsection*{Theorem}
-\[ |A \cup B| = |A| + |B| - |A \cap B|  \]
-
-\subsection*{Probability}
-\begin{itemize}
-\item[9B.2] The sample space of an experiment ($S$)
-\item[9B.3] The size of a sample space
-\item[9B.4] Indepedent Evcents (9.3.1)
-\end{itemize}
-%-----------------------------------------------------%
-
-
-\chapter{Session 10 }
-Systems of Linear Equation
-\section{Matrices}
-
-What are the dimensions of the following matrix
-
-
-\[ \left(
-\begin{array}{cc}
-a_1 & a_2 \\ 
-b_1 & b_2
-\end{array} \right)\left(
-\begin{array}{cc}
-c_1 & d_1 \\ 
-c_2 & d_2
-\end{array} \right) = \left(
-\begin{array}{cc}
-(a_1 \times c_1) + (a_2 \times c_2) & (a_1 \times d_1) + (a_2 \times d_2) \\ 
-(b_1 \times c_1) + (b_2 \times c_2) & (b_1 \times d_1) + (b_2 \times d_2)
-\end{array} \right) \]
-
-\bigskip
-\large{
-\[ \left(
-\begin{array}{cc}
-1 & 3 \\ 
-0 & 2
-\end{array} \right)\left(
-\begin{array}{cc}
-1 & 2 \\ 
-4 & 1
-\end{array} \right) = \left(
-\begin{array}{cc}
-(1 \times 1) + (3 \times 4) & (1 \times 2) + (3 \times 1) \\ 
-(0 \times 4) + (2 \times 4) & (0 \times 2) + (2 \times 1)
-\end{array} \right) = \left(
-\begin{array}{cc}
-14 & 5 \\ 
-8 & 2
-\end{array} \right) \]
-}
-
-\[ \left(
-\left(
-\begin{array}{cc}
-1 & 2 \\ 
-4 & 1
-\end{array} \right)
-\begin{array}{cc}
-1 & 3 \\ 
-0 & 2
-\end{array} \right) = ? \]
-
-
-
-\section*{Reduced Echelon Form}
-
-\begin{itemize}
-\item
-\item
-\item
-\end{itemize}
-
-
-\section*{Session 10: Matrices and Systems of Equations}
-\begin{itemize}
-\item[10A.1] Dimensions of a Matrix
-\item[10A.2] Matrix Multiplication
-\item[10A.3] Matrix Calculations
-\item[10A.4] 
-\end{itemize}
-
-\begin{itemize}
-\item[10B.1] Systems of Equations
-\item[10B.2] Expression Systems of Equations as Matrices
-\item[10B.3] Augmented Matrices
-\item[10B.4] Guassian Elimination
-\end{itemize}
+\item[9B.1] 
 
 
 %-----------------------------------------------------%
-
-
-
-
-
-
-
 
 
 
@@ -602,11 +246,6 @@ x-27+5z=4
 
 Use Gaussian elimination to solve the system.
 
-\subsection*{Part B : Summations}
-
-Compute the following summation
-
-\[ \sum^{i=100}_{i=25} i^2 + 3i -5)\]
 
 \section{Matrices}
 
@@ -659,60 +298,6 @@ c_2 & d_2
 0 & 2
 \end{array} \right) = ? \]
 
-
-%---------------------------------------%
-\subsection*{Question 1}
-
-\begin{enumerate}[(i)]
-\item (1 Mark) When is the positive integer $p$ said to be a prime number?
-\item (2 Marks) Express the following hexadecimal number as a decimal number, and as a binary number: \[(A32.8)_{16}\]
-
-\item (2 Marks) Convert the following decimal number into base 2, showing all your working: $(253)_{10}$. 
-\item (2 Marks) Covert the decimal integer $(407)_{10}$ to binary notation.
-
-\item (2 Marks) Showing your working, express the following number 
-\[ 1.024024024024\ldots\]
-as a ration number in its simplest form.
-\item (1 Mark) Compute the following $101101_2 + 1101_2$ 
-\end{enumerate}
-%--------------------------------------------------- %
-\subsection*{Question 2}
-%Question 2
-Let A and B and C be subsets of a universal set U.
-\begin{itemize}
-\item[(a)] (1 Mark) Draw a labelled Venn diagram depicting A,B,C in such a way that they divide
-U into 8 disjoint regions. [1]
-\item[(b)] (3 Marks) The subset $X \subseteq U$ is defined by the following membership table below. Shade the region X on your diagram. Describe the region you have shaded in
-set notation as simply as you can. 
-\end{itemize}
-{\LARGE
-\begin{center}
-\begin{tabular}{|c|c|c|c|}
-\hline
-A & B & C & X \\ \hline
-0 & 0 & 0 & 0 \\ \hline
-0 & 0 & 1 & 1 \\ \hline
-0 & 1 & 0 & 0 \\ \hline
-0 & 1 & 1 & 0 \\ \hline
-1 & 0 & 0 & 1 \\ \hline
-1 & 0 & 1 & 1 \\ \hline
-1 & 1 & 0 & 1 \\ \hline
-1 & 1 & 1 & 0 \\ \hline
-\end{tabular} 
-\end{center}
-}
-\begin{itemize}
-\item[(c)] (3 Marks) The subset $Y \subseteq U$ is defined as $Y = A \cup (C - B)$. Construct the membership
-table for Y. 
-\item[(d)] (3 Marks) For each of the following statements say whether it is true or false, justifying
-your answer, using the Venn diagram you drew earlier.
-
-\begin{enumerate}[(i)]
-\item $Y \subseteq X$
-\item $Y^{\prime} \subseteq X^{\prime}$
-\item $Y - X = A \cap B \cap C$.
-\end{enumerate}
-\end{itemize}
 %=====================================================================%
 \subsection*{Question 3}
 %2003
@@ -809,19 +394,6 @@ Explain what it means to say thet $\mathcal{R}$ is
 
 
 \end{itemize}
-
-
-%--------------------------------------------------------------------------- %
-\section*{Question 7}
-Let the sequence un be defined by the recurrence relation
-\[u_{n+1} = u_n + 2n, \mbox{ for n = 1, 2, 3, ...}\]
-and let $u_1 = 1$.\\
-%\begin{figure}[h!]
-%\centering
-%\includegraphics[width=1.11\linewidth]{SeqSerQuestion2005}
-%\end{figure}
-
-%---------------------------------------------------------------------------%
 % TREES
 \newpage
 \section*{Question 8}
